<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_margin"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_marginEnd="@dimen/activity_margin"
        android:layout_marginBottom="@dimen/activity_margin"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="@string/category" />

    <TextView
        android:id="@+id/where"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_margin"
        android:layout_marginEnd="@dimen/activity_margin"
        android:layout_marginBottom="@dimen/activity_margin"
        tools:text="@string/area" />

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_margin"
        android:layout_marginEnd="@dimen/activity_margin"
        android:layout_marginBottom="@dimen/activity_margin"
        android:textColor="@android:color/black"
        tools:text="@string/question" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_margin"
        android:layout_marginEnd="@dimen/activity_margin"
        android:layout_marginBottom="@dimen/activity_margin"
        android:textColor="@android:color/black"
        tools:text="@string/answer" />
</LinearLayout>