<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/exit"
        android:src="@drawable/exit"
        android:background="#00000000"/>

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_margin"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_marginEnd="@dimen/activity_margin" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_margin"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_marginEnd="@dimen/activity_margin"
        android:hint="@string/name"
        android:inputType="text" />

    <EditText
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/activity_margin"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_marginEnd="@dimen/activity_margin"
        android:hint="@string/question"
        android:layout_weight="1"/>

    <ImageButton
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/activity_margin"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_marginEnd="@dimen/activity_margin"
        android:layout_marginBottom="240dp"
        android:src="@drawable/add"
        android:background="#00000000"/>

</LinearLayout>