<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchOption"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:src="@drawable/exit"
        android:background="#00000000"
        android:layout_marginStart="@dimen/activity_margin"
        android:layout_marginTop="@dimen/activity_margin"/>

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_size"
        android:layout_marginStart="@dimen/activity_margin"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_marginEnd="@dimen/activity_margin" />

    <EditText
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_size"
        android:layout_marginStart="@dimen/activity_margin"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_marginEnd="@dimen/activity_margin"
        android:layout_marginBottom="@dimen/activity_margin"
        android:hint="@string/search" />

    <ImageButton
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_margin"
        android:text="@string/searchOption"
        android:background="#00000000"
        android:textAllCaps="true"
        android:src="@drawable/search"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/activity_margin"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_marginEnd="@dimen/activity_margin"
        android:layout_marginBottom="@dimen/activity_margin"
        android:id="@+id/list"/>
</LinearLayout>